# envcraft

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
demo/: dev.env  invalid.env  messy.env  prod.env  run_demo.bat  run_demo.sh  schema.yml  valid.env
examples/: .env.example  .env.production  .env.staging  schema.yml
src/: cli.rs  diff.rs  error.rs  format.rs  main.rs  parser.rs  schema.rs
tests/: integration_tests.rs
