[package]
name = "envcraft"
version = "0.1.0"
edition = "2021"
authors = ["LazyFrog <support@kindware.dev>"]
license = "MIT"
description = "Precise tools for .env files"
repository = "https://github.com/Brutus1066/envcraft"
homepage = "https://kindware.dev"
documentation = "https://github.com/Brutus1066/envcraft#readme"
readme = "README.md"
keywords = ["env", "dotenv", "cli", "configuration", "environment"]
categories = ["command-line-utilities", "config", "development-tools"]
exclude = ["examples/*", ".github/*"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "envcraft"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
